# LFM

./: .cursorruls  main.py  pyproject.toml
app/: __init__.py  apps.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_transaction_category.py  0003_savingsgoal.py
app/static/: style.css
app/static/js/: accounts.js
app/templates/: accounts_dropdown.html  add_account.html  add_transaction.html  base.html  create_account.html  dashboard.html  delete_account.html  delete_saved_account.html  delete_transaction.html  delete_user_confirm.html  edit_transaction.html  financial_tips.html  markets.html  profile.html  quick_actions.html  savings_add.html  savings_delete.html  savings_deposit.html  savings_edit.html  savings_list.html  savings_withdraw.html  transactions_list.html
app/templates/registration/: login.html  register.html
config/: settings.py
